--- a/index.html
+++ b/index.html
@@ -64,6 +64,10 @@
                    <!--<li class="nav-item"><a class="nav-link" href="https://www.instagram.com/templateflip" title="Instagram"><i class="fab fa-instagram"></i><span class="menu-title sr-only">Instagram</span></a></li> -->
                    <!--<li class="nav-item"><a class="nav-link" href="https://www.linkedin.com/" title="LinkedIn"><i class="fab fa-linkedin"></i><span class="menu-title sr-only">LinkedIn</span></a></li> -->
                    <!--<li class="nav-item"><a class="nav-link" href="https://www.behance.net/templateflip" title="Behance"><i class="fab fa-behance"></i><span class="menu-title sr-only">Behance</span></a></li> -->
+                   <li class="nav-item"><a class="nav-link" href="https://twitter.com/atharao_" title="Twitter"><i class="fab fa-twitter"></i><span class="menu-title sr-only">Twitter</span></a></li>
+                   <li class="nav-item"><a class="nav-link" href="https://github.com/atharao" title="GitHub"><i class="fab fa-github"></i><span class="menu-title sr-only">GitHub</span></a></li>
+                   <li class="nav-item"><a class="nav-link" href="https://linkedin.com/in/atharao" title="LinkedIn"><i class="fab fa-linkedin"></i><span class="menu-title sr-only">LinkedIn</span></a></li>
+
                 </ul>
               </nav>
             </div>
@@ -427,7 +431,7 @@
         <div class="mt-3 px-1">
           <div class="h5">Let’s talk how I can help you!</div>
           <p>If you like my work and want to avail my services then drop me a message using the contact form. </p>
-          <p>Or get in touch using my email, skype or my contact number.</p>
+          <p>Or get in touch using my email, Twitter or my contact number.</p>
           <p>See you!</p>
         </div>
         <div class="mt-53 px-1">
@@ -467,7 +471,7 @@
             <li class="nav-item"><a class="nav-link" href="https://twitter.com/atharao_" title="Twitter"><i class="fab fa-twitter"></i><span class="menu-title sr-only">Twitter</span></a></li>
             <li class="nav-item"><a class="nav-link" href="https://github.com/atharao" title="GitHub"><i class="fab fa-github"></i><span class="menu-title sr-only">GitHub</span></a></li>
             <!--<li class="nav-item"><a class="nav-link" href="https://www.instagram.com/templateflip" title="Instagram"><i class="fab fa-instagram"></i><span class="menu-title sr-only">Instagram</span></a></li>-->
-            <li class="nav-item"><a class="nav-link" href="https://www.linkedin.com/in/rao-athar-khan-246ba1253/" title="LinkedIn"><i class="fab fa-linkedin"></i><span class="menu-title sr-only">LinkedIn</span></a></li>
+            <li class="nav-item"><a class="nav-link" href="https://linkedin.com/in/atharao" title="LinkedIn"><i class="fab fa-linkedin"></i><span class="menu-title sr-only">LinkedIn</span></a></li>
             <!--<li class="nav-item"><a class="nav-link" href="https://www.behance.net/templateflip" title="Behance"><i class="fab fa-behance"></i><span class="menu-title sr-only">Behance</span></a></li> -->
           </ul>
         </nav>
