--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Rao Athar-Full Stack Web Developer</title>
+    <title>Rao Athar - Web Developer</title>
     <link href="images/favicon.png" rel="icon">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="crossorigin"/>
     <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;700;800&amp;display=swap"/>
@@ -55,19 +55,17 @@
           <div class="mt-5">
             <p class="lead text-uppercase mb-1">Hello!</p>
             <h1 class="intro-title marker" data-aos="fade-left" data-aos-delay="50">I’m Rao Athar Khan</h1>
-            <p class="lead fw-normal mt-3" data-aos="fade-up" data-aos-delay="100">Full-Stack Developer</p>
+            <p class="lead fw-normal mt-3" data-aos="fade-up" data-aos-delay="100">Web Developer</p>
             <div class="social-nav" data-aos="fade-up" data-aos-delay="200">
               <nav role="navigation">
                 <ul class="nav justify-content-left">
-                  <!--<li class="nav-item"><a class="nav-link" href="https://twitter.com/templateflip" title="Twitter"><i class="fab fa-twitter"></i><span class="menu-title sr-only">Twitter</span></a></li> --> 
-                   <!--<li class="nav-item"><a class="nav-link" href="https://www.facebook.com/templateflip" title="Facebook"><i class="fab fa-facebook"></i><span class="menu-title sr-only">Facebook</span></a></li> -->
-                   <!--<li class="nav-item"><a class="nav-link" href="https://www.instagram.com/templateflip" title="Instagram"><i class="fab fa-instagram"></i><span class="menu-title sr-only">Instagram</span></a></li> -->
-                   <!--<li class="nav-item"><a class="nav-link" href="https://www.linkedin.com/" title="LinkedIn"><i class="fab fa-linkedin"></i><span class="menu-title sr-only">LinkedIn</span></a></li> -->
-                   <!--<li class="nav-item"><a class="nav-link" href="https://www.behance.net/templateflip" title="Behance"><i class="fab fa-behance"></i><span class="menu-title sr-only">Behance</span></a></li> -->
-                   <li class="nav-item"><a class="nav-link" href="https://twitter.com/atharao_" title="Twitter"><i class="fab fa-twitter"></i><span class="menu-title sr-only">Twitter</span></a></li>
-                   <li class="nav-item"><a class="nav-link" href="https://github.com/atharao" title="GitHub"><i class="fab fa-github"></i><span class="menu-title sr-only">GitHub</span></a></li>
-                   <li class="nav-item"><a class="nav-link" href="https://linkedin.com/in/atharao" title="LinkedIn"><i class="fab fa-linkedin"></i><span class="menu-title sr-only">LinkedIn</span></a></li>
-
+                  <li class="nav-item"><a class="nav-link" href="https://twitter.com/atharao_" title="Twitter"><i class="fab fa-twitter"></i><span class="menu-title sr-only">Twitter</span></a></li>
+                  <li class="nav-item"><a class="nav-link" href="https://github.com/atharao" title="GitHub"><i class="fab fa-github"></i><span class="menu-title sr-only">GitHub</span></a></li>
+                  <li class="nav-item"><a class="nav-link" href="https://discord.com/users/atharao" title="Discord"><i class="fab fab fa-discord"></i><span class="menu-title sr-only">Discord</span></a></li>
+                  <li class="nav-item"><a class="nav-link" href="https://linkedin.com/in/atharao" title="LinkedIn"><i class="fab fa-linkedin"></i><span class="menu-title sr-only">LinkedIn</span></a></li>
+                  <li class="nav-item"><a class="nav-link" href="mailto:YOUR_EMAIL_ADDRESS" title="Gmail"><i class="fas fa-envelope"></i><span class="menu-title sr-only">Gmail</span></a></li>
+                  <li class="nav-item"><a class="nav-link" href="https://api.whatsapp.com/send?phone=+919760087763" title="WhatsApp"><i class="fab fa-whatsapp"></i><span class="menu-title sr-only">WhatsApp</span></a></li> 
+                  <li class="nav-item"><a class="nav-link" href="https://t.me/atharao" title="Telegram"><i class="fab fa-telegram"></i><span class="menu-title sr-only">Telegram  </span></a></li>
                 </ul>
               </nav>
             </div>
@@ -83,8 +81,8 @@
   <div class="container-narrow">
     <div class="row">
       <div class="col-md-6">
-        <h2 class="h4 my-2">Hello! I’m Rao Athar Khan.</h2>
-        <p>I am passionate and experienced full-stack developer dedicated to transforming your digital visions into reality. With a holistic approach, I bridge the gap between the front-end and back-end, crafting seamless web applications that engage users and deliver exceptional experiences. My journey in web development has equipped me with a comprehensive skill set, ranging from crafting responsive user interfaces using the latest front-end technologies to architecting robust server-side solutions. I thrive on solving complex challenges and adapting to new technologies, ensuring that your projects stay at the forefront of innovation. Whether you're a startup, a business owner, or an individual with a unique idea, I'm here to collaborate and build customized solutions tailored to your needs. Let's work together to bring your concepts to life and achieve digital success</p>
+        <h2 class="h4 my-2">Hello! I'm Rao Athar Khan.</h2>
+        <p>I am passionate and experienced web developer dedicated to transforming your digital visions into reality. With a holistic approach, I bridge the gap between the front-end and back-end, crafting seamless web applications that engage users and deliver exceptional experiences. My journey in web development has equipped me with a comprehensive skill set, ranging from crafting responsive user interfaces using the latest front-end technologies to architecting robust server-side solutions. I thrive on solving complex challenges and adapting to new technologies, ensuring that your projects stay at the forefront of innovation. Whether you're a startup, a business owner, or an individual with a unique idea, I'm here to collaborate and build customized solutions tailored to your needs. Let's work together to bring your concepts to life and achieve digital success</p>
         <div class="row mt-3">
           <div class="col-sm-2">
             <div class="pb-1">Age:</div>
@@ -202,13 +200,13 @@
             </div>
           </div>
           <div class="py-1">
-            <div class="d-flex text-small fw-bolder"><span class="me-auto">MySQL</span><span>60%</span></div>
+            <div class="d-flex text-small fw-bolder"><span class="me-auto">Django</span><span>60%</span></div>
             <div class="progress my-1">
               <div class="progress-bar bg-primary" role="progressbar" data-aos="zoom-in-right" data-aos-delay="600" data-aos-anchor=".skills-section" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div>
           <div class="py-1">
-            <div class="d-flex text-small fw-bolder"><span class="me-auto">Photoshop</span><span>60%</span></div>
+            <div class="d-flex text-small fw-bolder"><span class="me-auto">Adobe Photoshop</span><span>60%</span></div>
             <div class="progress my-1">
               <div class="progress-bar bg-primary" role="progressbar" data-aos="zoom-in-right" data-aos-delay="600" data-aos-anchor=".skills-section" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
@@ -343,9 +341,9 @@
           <div class="card-header px-3 py-2">
             <div class="d-flex justify-content-between">
               <div>
-                <h3 class="h5 mb-1">Full Stack Development</h3>
+                <h3 class="h5 mb-1">Web Development</h3>
                 <div class="text-muted text-small">Coder Inc. <small>(2020-2021)</small></div>
-              </div><img src="images/services/full-stack.svg" width="48" height="48" alt="full stack"/>
+              </div><img src="images/services/full-stack.svg" width="48" height="48" alt="web developement"/>
             </div>
           </div>
           <div class="card-body px-3 py-2">
@@ -464,23 +462,23 @@
   <div class="container">
     <div class="my-3">
       <div class="h4">Rao Athar Khan</div>
-      <p>Full-Stack Developer</p>
+      <p>Web Developer</p>
       <div class="social-nav">
         <nav role="navigation">
           <ul class="nav justify-content-center">
             <li class="nav-item"><a class="nav-link" href="https://twitter.com/atharao_" title="Twitter"><i class="fab fa-twitter"></i><span class="menu-title sr-only">Twitter</span></a></li>
             <li class="nav-item"><a class="nav-link" href="https://github.com/atharao" title="GitHub"><i class="fab fa-github"></i><span class="menu-title sr-only">GitHub</span></a></li>
-            <!--<li class="nav-item"><a class="nav-link" href="https://www.instagram.com/templateflip" title="Instagram"><i class="fab fa-instagram"></i><span class="menu-title sr-only">Instagram</span></a></li>-->
+            <li class="nav-item"><a class="nav-link" href="https://discord.com/users/atharao" title="Discord"><i class="fab fab fa-discord"></i><span class="menu-title sr-only">Discord</span></a></li>
             <li class="nav-item"><a class="nav-link" href="https://linkedin.com/in/atharao" title="LinkedIn"><i class="fab fa-linkedin"></i><span class="menu-title sr-only">LinkedIn</span></a></li>
-            <!--<li class="nav-item"><a class="nav-link" href="https://www.behance.net/templateflip" title="Behance"><i class="fab fa-behance"></i><span class="menu-title sr-only">Behance</span></a></li> -->
+            <li class="nav-item"><a class="nav-link" href="mailto:YOUR_EMAIL_ADDRESS" title="Gmail"><i class="fas fa-envelope"></i><span class="menu-title sr-only">Gmail</span></a></li>
+            <li class="nav-item"><a class="nav-link" href="https://api.whatsapp.com/send?phone=+919760087763" title="WhatsApp"><i class="fab fa-whatsapp"></i><span class="menu-title sr-only">WhatsApp</span></a></li> 
+            <li class="nav-item"><a class="nav-link" href="https://t.me/atharao" title="Telegram"><i class="fab fa-telegram"></i><span class="menu-title sr-only">Telegram  </span></a></li> 
           </ul>
         </nav>
       </div>
     </div>
     <div class="text-small text-secondary">
-       <!--<div class="mb-1">&copy; Super Folio. All rights reserved.</div>
-      <div>
-        <!-- Make sure to buy a license for the template before removing the line below. Buy license on https://templateflip.com/ Design - <a href="https://templateflip.com/" target="_blank">TemplateFlip</a></div> -->
+       <div class="mb-1">&copy; 2023 Rao Athar Khan. All rights reserved.</div>
     </div>
   </div>
 </footer></div>
