--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Rao Athar - Web Developer</title>
+    <title>Rao Athar - Software Developer & Web Developer</title>
     <link href="images/favicon.png" rel="icon">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="crossorigin"/>
     <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;700;800&amp;display=swap"/>
@@ -55,7 +55,7 @@
           <div class="mt-5">
             <p class="lead text-uppercase mb-1">Hello!</p>
             <h1 class="intro-title marker" data-aos="fade-left" data-aos-delay="50">I’m Rao Athar Khan</h1>
-            <p class="lead fw-normal mt-3" data-aos="fade-up" data-aos-delay="100">Web Developer</p>
+            <p class="lead fw-normal mt-3" data-aos="fade-up" data-aos-delay="100">Software Developer & Web Developer</p>
             <div class="social-nav" data-aos="fade-up" data-aos-delay="200">
               <nav role="navigation">
                 <ul class="nav justify-content-left">
@@ -63,7 +63,7 @@
                   <li class="nav-item"><a class="nav-link" href="https://github.com/atharao" title="GitHub"><i class="fab fa-github"></i><span class="menu-title sr-only">GitHub</span></a></li>
                   <li class="nav-item"><a class="nav-link" href="https://discord.com/users/atharao" title="Discord"><i class="fab fab fa-discord"></i><span class="menu-title sr-only">Discord</span></a></li>
                   <li class="nav-item"><a class="nav-link" href="https://linkedin.com/in/atharao" title="LinkedIn"><i class="fab fa-linkedin"></i><span class="menu-title sr-only">LinkedIn</span></a></li>
-                  <li class="nav-item"><a class="nav-link" href="mailto:YOUR_EMAIL_ADDRESS" title="Gmail"><i class="fas fa-envelope"></i><span class="menu-title sr-only">Gmail</span></a></li>
+                  <li class="nav-item"><a class="nav-link" href="mailto:raoathar.200@gmail.com" title="Gmail"><i class="fas fa-envelope"></i><span class="menu-title sr-only">Gmail</span></a></li>
                   <li class="nav-item"><a class="nav-link" href="https://api.whatsapp.com/send?phone=+919760087763" title="WhatsApp"><i class="fab fa-whatsapp"></i><span class="menu-title sr-only">WhatsApp</span></a></li> 
                   <li class="nav-item"><a class="nav-link" href="https://t.me/atharao" title="Telegram"><i class="fab fa-telegram"></i><span class="menu-title sr-only">Telegram  </span></a></li>
                 </ul>
@@ -132,7 +132,6 @@
       <h2 class="marker marker-center">My Services</h2>
     </div>
     <div class="text-center">
-       <!--<p class="mx-auto mb-3" style="max-width:600px"> I offer services fit for any website or app. I can quickly maximize timely deliverables for real-time schemas.</p>-->
     </div>
     <div class="row py-3">
       <div class="col-md-3 text-center" data-aos="fade-up" data-aos-delay="100"><img class="mb-2" src="images/services/web-design.svg" width="96" height="96" alt="web design"/>
@@ -156,7 +155,6 @@
       <h2 class="marker marker-center">My Skills</h2>
     </div>
     <div class="text-center">
-       <!--<p class="mx-auto mb-3" style="max-width:600px">I am a quick learner and specialize in multitude of skills required for Web Application Development and Product Design</p> -->
     </div>
     <div class="bg-light p-3">
       <div class="row">
