Updated Skills section

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
             <div class="social-nav" data-aos="fade-up" data-aos-delay="200">
               <nav role="navigation">
                 <ul class="nav justify-content-left">
+                  <li class="nav-item"><a class="nav-link" href="https://linktr.ee/atharao" title="Linktree"><i class="fas fa-link"></i><span class="menu-title sr-only">Linktree</span></a></li>
                   <li class="nav-item"><a class="nav-link" href="https://twitter.com/atharao_" title="Twitter"><i class="fab fa-twitter"></i><span class="menu-title sr-only">Twitter</span></a></li>
                   <li class="nav-item"><a class="nav-link" href="https://github.com/atharao" title="GitHub"><i class="fab fa-github"></i><span class="menu-title sr-only">GitHub</span></a></li>
                   <li class="nav-item"><a class="nav-link" href="https://discord.com/users/atharao" title="Discord"><i class="fab fab fa-discord"></i><span class="menu-title sr-only">Discord</span></a></li>
@@ -82,7 +83,7 @@
     <div class="row">
       <div class="col-md-6">
         <h2 class="h4 my-2">Hello! I'm Rao Athar Khan.</h2>
-        <p>I am passionate and experienced web developer dedicated to transforming your digital visions into reality. With a holistic approach, I bridge the gap between the front-end and back-end, crafting seamless web applications that engage users and deliver exceptional experiences. My journey in web development has equipped me with a comprehensive skill set, ranging from crafting responsive user interfaces using the latest front-end technologies to architecting robust server-side solutions. I thrive on solving complex challenges and adapting to new technologies, ensuring that your projects stay at the forefront of innovation. Whether you're a startup, a business owner, or an individual with a unique idea, I'm here to collaborate and build customized solutions tailored to your needs. Let's work together to bring your concepts to life and achieve digital success</p>
+        <p>I am Rao Athar Khan, a dedicated Software Developer with a fervent passion for Web and Blockchain Development. My professional journey is anchored by a robust programming foundation, and I derive immense satisfaction from crafting dynamic web applications and delving into the boundless potential of Blockchain technology. My overarching ambition is to lend my expertise to pioneering and influential ventures within the technology sector, thereby making a meaningful contribution to the industry's evolution.</p>
         <div class="row mt-3">
           <div class="col-sm-2">
             <div class="pb-1">Age:</div>
@@ -134,17 +135,17 @@
     <div class="text-center">
     </div>
     <div class="row py-3">
-      <div class="col-md-3 text-center" data-aos="fade-up" data-aos-delay="100"><img class="mb-2" src="images/services/web-design.svg" width="96" height="96" alt="web design"/>
-        <div class="h5">Web Design</div>
+      <div class="col-md-3 text-center" data-aos="fade-up" data-aos-delay="100"><img class="mb-2" src="images/services/new/3.png" width="96" height="96" alt="web design"/>
+        <div class="h5">Full Stack Development</div>
       </div>
-      <div class="col-md-3 text-center" data-aos="fade-up" data-aos-delay="200"><img class="mb-2" src="images/services/graphic-design.svg" width="96" height="96" alt="graphic design"/>
-        <div class="h5">Graphic Design</div>
+      <div class="col-md-3 text-center" data-aos="fade-up" data-aos-delay="200"><img class="mb-2" src="images/services/new/2.png" width="96" height="96" alt="graphic design"/>
+        <div class="h5">Frontend Development</div>
       </div>
-      <div class="col-md-3 text-center" data-aos="fade-up" data-aos-delay="300"><img class="mb-2" src="images/services/ui-ux.svg" width="96" height="96" alt="ui-ux"/>
-        <div class="h5">UI/UX</div>
+      <div class="col-md-3 text-center" data-aos="fade-up" data-aos-delay="300"><img class="mb-2" src="images/services/new/1.png" width="96" height="96" alt="ui-ux"/>
+        <div class="h5">Backend Development</div>
       </div>
-      <div class="col-md-3 text-center" data-aos="fade-up" data-aos-delay="400"><img class="mb-2" src="images/services/app-development.svg" width="96" height="96" alt="app development"/>
-        <div class="h5">App Development</div>
+      <div class="col-md-3 text-center" data-aos="fade-up" data-aos-delay="400"><img class="mb-2" src="images/services/new/4.png" width="96" height="96" alt="app development"/>
+        <div class="h5">Blockchain Development</div>
       </div>
     </div>
   </div>
@@ -160,53 +161,77 @@
       <div class="row">
         <div class="col-md-5">
           <div class="py-1">
-            <div class="d-flex text-small fw-bolder"><span class="me-auto">HTML5</span><span>90%</span></div>
+            <div class="d-flex text-small fw-bolder"><span class="me-auto">Python</span><span>70%</span></div>
             <div class="progress my-1">
-              <div class="progress-bar bg-primary" role="progressbar" data-aos="zoom-in-right" data-aos-delay="100" data-aos-anchor=".skills-section" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="progress-bar bg-primary" role="progressbar" data-aos="zoom-in-right" data-aos-delay="100" data-aos-anchor=".skills-section" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div>
           <div class="py-1">
-            <div class="d-flex text-small fw-bolder"><span class="me-auto">CSS3</span><span>90%</span></div>
+            <div class="d-flex text-small fw-bolder"><span class="me-auto">HTML</span><span>60%</span></div>
             <div class="progress my-1">
-              <div class="progress-bar bg-primary" role="progressbar" data-aos="zoom-in-right" data-aos-delay="200" data-aos-anchor=".skills-section" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="progress-bar bg-primary" role="progressbar" data-aos="zoom-in-right" data-aos-delay="200" data-aos-anchor=".skills-section" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div>
           <div class="py-1">
-            <div class="d-flex text-small fw-bolder"><span class="me-auto">JavaScript</span><span>80%</span></div>
+            <div class="d-flex text-small fw-bolder"><span class="me-auto">CSS</span><span>50%</span></div>
             <div class="progress my-1">
-              <div class="progress-bar bg-primary" role="progressbar" data-aos="zoom-in-right" data-aos-delay="300" data-aos-anchor=".skills-section" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="progress-bar bg-primary" role="progressbar" data-aos="zoom-in-right" data-aos-delay="300" data-aos-anchor=".skills-section" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div>
           <div class="py-1">
-            <div class="d-flex text-small fw-bolder"><span class="me-auto">React</span><span>75%</span></div>
+            <div class="d-flex text-small fw-bolder"><span class="me-auto">Java</span><span>25%</span></div>
             <div class="progress my-1">
-              <div class="progress-bar bg-primary" role="progressbar" data-aos="zoom-in-right" data-aos-delay="300" data-aos-anchor=".skills-section" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="progress-bar bg-primary" role="progressbar" data-aos="zoom-in-right" data-aos-delay="300" data-aos-anchor=".skills-section" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+          </div>
+          <div class="py-1">
+            <div class="d-flex text-small fw-bolder"><span class="me-auto">TypeScript</span><span>25%</span></div>
+            <div class="progress my-1">
+              <div class="progress-bar bg-primary" role="progressbar" data-aos="zoom-in-right" data-aos-delay="300" data-aos-anchor=".skills-section" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+          </div>
+          <div class="py-1">
+            <div class="d-flex text-small fw-bolder"><span class="me-auto">C++</span><span>50%</span></div>
+            <div class="progress my-1">
+              <div class="progress-bar bg-primary" role="progressbar" data-aos="zoom-in-right" data-aos-delay="300" data-aos-anchor=".skills-section" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div>
         </div>
         <div class="col-md-5 offset-md-2">
           <div class="py-1">
-            <div class="d-flex text-small fw-bolder"><span class="me-auto">Python</span><span>90%</span></div>
+            <div class="d-flex text-small fw-bolder"><span class="me-auto">Next.js</span><span>30%</span></div>
             <div class="progress my-1">
-              <div class="progress-bar bg-primary" role="progressbar" data-aos="zoom-in-right" data-aos-delay="400" data-aos-anchor=".skills-section" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="progress-bar bg-primary" role="progressbar" data-aos="zoom-in-right" data-aos-delay="400" data-aos-anchor=".skills-section" style="width: 30%" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div>
           <div class="py-1">
-            <div class="d-flex text-small fw-bolder"><span class="me-auto">Flask</span><span>70%</span></div>
+            <div class="d-flex text-small fw-bolder"><span class="me-auto">Flask</span><span>20%</span></div>
             <div class="progress my-1">
-              <div class="progress-bar bg-primary" role="progressbar" data-aos="zoom-in-right" data-aos-delay="500" data-aos-anchor=".skills-section" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="progress-bar bg-primary" role="progressbar" data-aos="zoom-in-right" data-aos-delay="500" data-aos-anchor=".skills-section" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div>
           <div class="py-1">
-            <div class="d-flex text-small fw-bolder"><span class="me-auto">Django</span><span>60%</span></div>
+            <div class="d-flex text-small fw-bolder"><span class="me-auto">Remix IDE</span><span>70%</span></div>
             <div class="progress my-1">
-              <div class="progress-bar bg-primary" role="progressbar" data-aos="zoom-in-right" data-aos-delay="600" data-aos-anchor=".skills-section" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="progress-bar bg-primary" role="progressbar" data-aos="zoom-in-right" data-aos-delay="600" data-aos-anchor=".skills-section" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div>
           <div class="py-1">
             <div class="d-flex text-small fw-bolder"><span class="me-auto">Adobe Photoshop</span><span>60%</span></div>
             <div class="progress my-1">
               <div class="progress-bar bg-primary" role="progressbar" data-aos="zoom-in-right" data-aos-delay="600" data-aos-anchor=".skills-section" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+          </div>
+          <div class="py-1">
+            <div class="d-flex text-small fw-bolder"><span class="me-auto">Ganache</span><span>60%</span></div>
+            <div class="progress my-1">
+              <div class="progress-bar bg-primary" role="progressbar" data-aos="zoom-in-right" data-aos-delay="600" data-aos-anchor=".skills-section" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+          </div>
+          <div class="py-1">
+            <div class="d-flex text-small fw-bolder"><span class="me-auto">Git and Github</span><span>60%</span></div>
+            <div class="progress my-1">
+              <div class="progress-bar bg-primary" role="progressbar" data-aos="zoom-in-right" data-aos-delay="600" data-aos-anchor=".skills-section" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div>
         </div>
@@ -356,7 +381,7 @@
 <div class="section px-3 px-lg-4 pt-5" id="testimonials">
   <div class="container-narrow">
     <div class="text-center mb-5">
-      <h2 class="marker marker-center">Client Testimonials</h2>
+      <h2 class="marker marker-center">Testimonials</h2>
     </div>
     <div class="row"> 
       <div class="col-md-6 mb-5" data-aos="fade-right" data-aos-delay="100">
@@ -426,8 +451,7 @@
       <div class="col-md-6" data-aos="fade-left" data-aos-delay="300">
         <div class="mt-3 px-1">
           <div class="h5">Let’s talk how I can help you!</div>
-          <p>If you like my work and want to avail my services then drop me a message using the contact form. </p>
-          <p>Or get in touch using my email, Twitter or my contact number.</p>
+          <p>If you like my work and want to avail my services then drop me a message using the contact form Or get in touch using my email, Twitter or my contact number.</p>
           <p>See you!</p>
         </div>
         <div class="mt-53 px-1">
@@ -436,13 +460,13 @@
               <div class="pb-1">Email:</div>
             </div>
             <div class="col-sm-10">
-              <div class="pb-1 fw-bolder"><a href="mailto:raoathar.200@gmail.com">raoathar.200@gmail.com</a></div>
+              <div class="pb-1 fw-bolder">raoathar.200@gmail.com</a></div>
             </div>
             <div class="col-sm-2">
               <div class="pb-1">Twitter:</div>
             </div>
             <div class="col-sm-10">
-              <div class="pb-1 fw-bolder"><a href="https://twitter.com/atharao_">@atharao_</a></div>
+              <div class="pb-1 fw-bolder">@atharao_</a></div>
             </div>
             <div class="col-sm-2">
               <div class="pb-1">Phone:</div>
@@ -460,15 +484,16 @@
   <div class="container">
     <div class="my-3">
       <div class="h4">Rao Athar Khan</div>
-      <p>Web Developer</p>
+      <p>Software Developer & Web Developer</p>
       <div class="social-nav">
         <nav role="navigation">
           <ul class="nav justify-content-center">
+            <li class="nav-item"><a class="nav-link" href="https://linktr.ee/atharao" title="Linktree"><i class="fas fa-link"></i><span class="menu-title sr-only">Linktree</span></a></li>
             <li class="nav-item"><a class="nav-link" href="https://twitter.com/atharao_" title="Twitter"><i class="fab fa-twitter"></i><span class="menu-title sr-only">Twitter</span></a></li>
             <li class="nav-item"><a class="nav-link" href="https://github.com/atharao" title="GitHub"><i class="fab fa-github"></i><span class="menu-title sr-only">GitHub</span></a></li>
             <li class="nav-item"><a class="nav-link" href="https://discord.com/users/atharao" title="Discord"><i class="fab fab fa-discord"></i><span class="menu-title sr-only">Discord</span></a></li>
             <li class="nav-item"><a class="nav-link" href="https://linkedin.com/in/atharao" title="LinkedIn"><i class="fab fa-linkedin"></i><span class="menu-title sr-only">LinkedIn</span></a></li>
-            <li class="nav-item"><a class="nav-link" href="mailto:YOUR_EMAIL_ADDRESS" title="Gmail"><i class="fas fa-envelope"></i><span class="menu-title sr-only">Gmail</span></a></li>
+            <li class="nav-item"><a class="nav-link" href="mailto:raoathar.200@gmail.com" title="Gmail"><i class="fas fa-envelope"></i><span class="menu-title sr-only">Gmail</span></a></li>
             <li class="nav-item"><a class="nav-link" href="https://api.whatsapp.com/send?phone=+919760087763" title="WhatsApp"><i class="fab fa-whatsapp"></i><span class="menu-title sr-only">WhatsApp</span></a></li> 
             <li class="nav-item"><a class="nav-link" href="https://t.me/atharao" title="Telegram"><i class="fab fa-telegram"></i><span class="menu-title sr-only">Telegram  </span></a></li> 
           </ul>
