--- a/index.html
+++ b/index.html
@@ -29,14 +29,15 @@
   <body id="top">
     <header class="bg-light">
       <nav class="navbar navbar-expand-lg navbar-light bg-light" id="header-nav" role="navigation">
-        <div class="container"><a class="link-dark navbar-brand site-title mb-0" href="#">You order we deliver</a>
+        <div class="container"><a class="link-dark navbar-brand site-title mb-0" href="#">You order I
+           deliver</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto me-2">
               <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
               <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
               <li class="nav-item"><a class="nav-link" href="#skills">Skills</a></li>
-              <li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li>
+              <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
               <li class="nav-item"><a class="nav-link" href="#experience">Experience</a></li>
               <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
             </ul>
@@ -239,67 +240,60 @@
     </div>
   </div>
 </div>
-<div class="section px-2 px-lg-4 pt-5" id="portfolio">
+<div class="section px-2 px-lg-4 pt-5" id="projects">
   <div class="container">
     <div class="text-center mb-5">
-      <h2 class="marker marker-center">Portfolio </h2>
+      <h2 class="marker marker-center">Projects</h2>
     </div>
     <div class="grid bp-gallery pb-3" data-aos="zoom-in-up" data-aos-delay="100">
       <div class="grid-sizer"></div>
-      <div class="grid-item"><a href="https://dribbble.com">
-          <figure class="portfolio-item"><img src="images/portfolio/1-small.png" data-bp="images/portfolio/1.jpg"/>
+      <div class="grid-item"><a href="https://github.com/atharao/NFT-Gated-Website">
+          <figure class="portfolio-item"><img src="images/portfolio/1-small.jpg" data-bp="images/portfolio/1.jpg"/>
             <figcaption>
-              <h4 class="h5 mb-0">Web Design</h4>
-              <div>Dribbble.com</div>
+              <h4 class="h5 mb-0">NFT Gated Website</h4>
             </figcaption>
           </figure></a></div>
-      <div class="grid-item"><a href="https://github.com">
+      <div class="grid-item"><a href="atharao.com">
           <figure class="portfolio-item"><img src="images/portfolio/2-small.png" data-bp="images/portfolio/2.jpg" data-caption="Example of an optional caption."/>
             <figcaption> 
-              <h4 class="h5 mb-0">Web Development</h4>
-              <div>GitHub.com</div>
+              <h4 class="h5 mb-0">Resume website</h4>
             </figcaption>
           </figure></a></div>
-      <div class="grid-item"><a href="https://soundcloud.com/">
-          <figure class="portfolio-item"><img src="images/portfolio/3-small.png" data-bp="images/portfolio/3.jpg" data-caption="Example of an optional caption."/>
+      <div class="grid-item"><a href="https://github.com/atharao/Music-Streaming-Website-Spotify-Clone">
+          <figure class="portfolio-item"><img src="images/portfolio/3-small.jpg" data-bp="images/portfolio/3.jpg" data-caption="Example of an optional caption."/>
             <figcaption> 
-              <h4 class="h5 mb-0">Audio Mixing</h4>
-              <div>Soundcloud.com</div>
+              <h4 class="h5 mb-0">Music Streaming Website Spotify Clone</h4>
             </figcaption>
           </figure></a></div>
-      <div class="grid-item"><a href="https://www.adobe.com/">
-          <figure class="portfolio-item"><img src="images/portfolio/4-small.png" data-bp="images/portfolio/4.jpg"/>
+      <div class="grid-item"><a href="https://github.com/atharao/Authentication-Portal">
+          <figure class="portfolio-item"><img src="images/portfolio/4-small.jpg" data-bp="images/portfolio/4.jpg"/>
             <figcaption>
-              <h4 class="h5 mb-0">Video Editing</h4>
-              <div>Adobe After Effects</div>
+              <h4 class="h5 mb-0">Authentication Portal</h4>
             </figcaption>
           </figure></a></div>
-      <div class="grid-item"><a href="https://www.adobe.com/">
-          <figure class="portfolio-item"><img src="images/portfolio/5-small.png" data-bp="images/portfolio/5.jpg"/>
+      <div class="grid-item"><a href="https://github.com/atharao/Supply-Chain-Management-using-Blockchain">
+          <figure class="portfolio-item"><img src="images/portfolio/5-small.jpg" data-bp="images/portfolio/5.jpg"/>
             <figcaption>
-              <h4 class="h5 mb-0">Photography</h4>
-              <div>Adobe Photoshop</div>
+              <h4 class="h5 mb-0">Supply Chain Management using Blockchain</h4>
             </figcaption>
           </figure></a></div>
-      <div class="grid-item"><a href="https://www.android.com/">
-          <figure class="portfolio-item"><img src="images/portfolio/6-small.png" data-bp="images/portfolio/6.jpg"/>
+      <div class="grid-item"><a href="https://github.com/atharao/Latex_Resume">
+          <figure class="portfolio-item"><img src="images/portfolio/6-small.jpg" data-bp="images/portfolio/6.jpg"/>
             <figcaption>
-              <h4 class="h5 mb-0">App Development</h4>
-              <div>Android</div>
+              <h4 class="h5 mb-0">Latex Resume </h4>
             </figcaption>
           </figure></a></div>
-      <div class="grid-item"><a href="https://flutter.dev/">
-          <figure class="portfolio-item"><img src="images/portfolio/7-small.png" data-bp="images/portfolio/7.jpg"/>
+      <div class="grid-item"><a href="https://github.com/atharao/Flipkart_Scraper">
+          <figure class="portfolio-item"><img src="images/portfolio/7-small.jpg" data-bp="images/portfolio/7.jpg"/>
             <figcaption>
-              <h4 class="h5 mb-0">App Design</h4>
-              <div>Flutter</div>
+              <h4 class="h5 mb-0">Flipkart Scraper
+              </h4>
             </figcaption>
           </figure></a></div>
-      <div class="grid-item"><a href="https://flutter.dev/">
-          <figure class="portfolio-item"><img src="images/portfolio/8-small.png" data-bp="images/portfolio/8.jpg"/>
+      <div class="grid-item"><a href="https://github.com/atharao/Dapp_Amazon">
+          <figure class="portfolio-item"><img src="images/portfolio/8-small.jpg" data-bp="images/portfolio/8.jpg"/>
             <figcaption>
-              <h4 class="h5 mb-0">App Development</h4>
-              <div>Flutter</div>
+              <h4 class="h5 mb-0">Dapp Amazon</h4>
             </figcaption>
           </figure></a></div>
     </div>
@@ -308,70 +302,36 @@
 <div class="section px-3 px-lg-4 pt-5" id="experience">
   <div class="container-narrow">
     <div class="text-center mb-5">
-      <h2 class="marker marker-center">Experience</h2>
+      <h2 class="marker marker-center">Professional Experience</h2>
     </div>
     <div class="row">
-      <div class="col-md-6">
-        <div class="card mb-3" data-aos="fade-right" data-aos-delay="100">
-          <div class="card-header px-3 py-2">
-            <div class="d-flex justify-content-between">
-              <div>
-                <h3 class="h5 mb-1">UI/UX Design</h3>
-                <div class="text-muted text-small">Designerr Inc. <small>(2012-2014)</small></div>
-              </div><img src="images/services/ui-ux.svg" width="48" height="48" alt="ui-ux"/>
-            </div>
-          </div>
-          <div class="card-body px-3 py-2">
-            <p>Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
-            <p>Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.</p>
-          </div>
-        </div>
-      </div>
       <div class="col-md-6">
         <div class="card mb-3" data-aos="fade-left" data-aos-delay="300">
           <div class="card-header px-3 py-2">
             <div class="d-flex justify-content-between">
               <div>
-                <h3 class="h5 mb-1">App Development</h3>
-                <div class="text-muted text-small">MakeMyApp LLC. <small>(2015-2018)</small></div>
-              </div><img src="images/services/app-development.svg" width="48" height="48" alt="app development"/>
+                <h3 class="h5 mb-1">Frontend Developer</h3>
+                <div class="text-muted text-small">Tokenomeme. <small>(09/2023-Present)</small></div>
+              </div><img src="images/services/new/2.png" width="48" height="48" alt="app development"/>
             </div>
           </div>
           <div class="card-body px-3 py-2">
-            <p>Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
-            <p>Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.</p>
+            <p>Currently working as a Frontend Developer at Tokenomeme, actively participating in the development and long-term maintenance of their web application. Using Next.js, TypeScript, and Material-UI to craft an exceptionally responsive and intuitive front-end.</p>
           </div>
         </div>
       </div>
       <div class="col-md-6">
-        <div class="card mb-3" data-aos="fade-right" data-aos-delay="200">
+        <div class="card mb-3" data-aos="fade-right" data-aos-delay="100">
           <div class="card-header px-3 py-2">
             <div class="d-flex justify-content-between">
               <div>
-                <h3 class="h5 mb-1">Web Design</h3>
-                <div class="text-muted text-small">Webbie LLC. <small>(2018-2020)</small></div>
-              </div><img src="images/services/web-design.svg" width="48" height="48" alt="web design"/>
+                <h3 class="h5 mb-1">NFT Gated Website</h3>
+                <div class="text-muted text-small">k3S Projects India Pvt Ltd. <small>(07/2023-09/2023)</small></div>
+              </div><img src="images/services/new/4.png" width="48" height="48" alt="ui-ux"/>
             </div>
           </div>
           <div class="card-body px-3 py-2">
-            <p>Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
-            <p>Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-6">
-        <div class="card mb-3" data-aos="fade-left" data-aos-delay="400">
-          <div class="card-header px-3 py-2">
-            <div class="d-flex justify-content-between">
-              <div>
-                <h3 class="h5 mb-1">Web Development</h3>
-                <div class="text-muted text-small">Coder Inc. <small>(2020-2021)</small></div>
-              </div><img src="images/services/full-stack.svg" width="48" height="48" alt="web developement"/>
-            </div>
-          </div>
-          <div class="card-body px-3 py-2">
-            <p>Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
-            <p>Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.</p>
+            <p>Created and managed an NFT gated website using Thirdweb SDK, Next.js, and TypeScript, harnessing blockchain technology for secure digital asset ownership. Implemented smart contracts to enable transparent and efficient transactions.</p>
           </div>
         </div>
       </div>
@@ -388,36 +348,36 @@
         <div class="d-flex ms-md-3"><span><i class="fas fa-2x fa-quote-left"></i></span><span class="m-2">Rao Athar Khan displays exemplary professionalism and is able to take on challenges. He learns quickly and is an asset to any team.</span></div>
         <div class="d-flex justify-content-end align-items-end">
           <div class="text-end me-2">
-            <div class="fw-bolder">Aiyana</div>
-            <div class="text-small">CEO / Web Design Company</div>
-          </div><img class="me-md-3 rounded" src="images/testimonials/client1.jpg" width="96" height="96" alt="client 1"/>
+            <div class="fw-bolder">Alex JACQUOT</div>
+            <div class="text-small">CTO / Tokenomeme</div>
+          </div><img class="me-md-3 rounded" src="images/testimonials/1.jpg" width="96" height="96" alt="client 1"/>
         </div>
       </div>
       <div class="col-md-6 mb-5" data-aos="fade-left" data-aos-delay="300">
         <div class="d-flex ms-md-3"><span><i class="fas fa-2x fa-quote-left"></i></span><span class="m-2">Rao Athar Khan displays exemplary professionalism and is able to take on challenges. He learns quickly and is an asset to any team.</span></div>
         <div class="d-flex justify-content-end align-items-end">
           <div class="text-end me-2">
-            <div class="fw-bolder">Alexander</div>
-            <div class="text-small">CEO / Web Design Company</div>
-          </div><img class="me-md-3 rounded" src="images/testimonials/client2.jpg" width="96" height="96" alt="client 1"/>
+            <div class="fw-bolder">Akhilesh Singh</div>
+            <div class="text-small">CEO / k3S Projects India Pvt Ltd</div>
+          </div><img class="me-md-3 rounded" src="images/testimonials/2.jpg" width="96" height="96" alt="client 1"/>
         </div>
       </div>
       <div class="col-md-6 mb-5" data-aos="fade-right" data-aos-delay="200">
         <div class="d-flex ms-md-3"><span><i class="fas fa-2x fa-quote-left"></i></span><span class="m-2">Rao Athar Khan is a great co-worker and problem solver. He is quick to extend his helping hand and makes a good team player.</span></div>
         <div class="d-flex justify-content-end align-items-end">
           <div class="text-end me-2">
-            <div class="fw-bolder">Ariya</div>
-            <div class="text-small">Web Developer</div>
-          </div><img class="me-md-3 rounded" src="images/testimonials/client3.jpg" width="96" height="96" alt="client 1"/>
+            <div class="fw-bolder">Soumya Upadhyay </div>
+            <div class="text-small">Researcher at NIT Arunachal Pradesh</div>
+          </div><img class="me-md-3 rounded" src="images/testimonials/3.jpg" width="96" height="96" alt="client 1"/>
         </div>
       </div>
       <div class="col-md-6 mb-5" data-aos="fade-left" data-aos-delay="400">
         <div class="d-flex ms-md-3"><span><i class="fas fa-2x fa-quote-left"></i></span><span class="m-2">Rao Athar Khan is a great co-worker and problem solver. He is quick to extend his helping hand and makes a good team player.</span></div>
         <div class="d-flex justify-content-end align-items-end">
           <div class="text-end me-2">
-            <div class="fw-bolder">Braiden</div>
-            <div class="text-small">Web Designer</div>
-          </div><img class="me-md-3 rounded" src="images/testimonials/client4.jpg" width="96" height="96" alt="client 1"/>
+            <div class="fw-bolder">Mehtab Zafar </div>
+            <div class="text-small">Product Security Engineer</div>
+          </div><img class="me-md-3 rounded" src="images/testimonials/4.jpg" width="96" height="96" alt="client 1"/>
         </div>
       </div>
     </div>
@@ -448,7 +408,7 @@
 </form>
         </div>
       </div>
-      <div class="col-md-6" data-aos="fade-left" data-aos-delay="300">
+      <div class="col-md-6" data-aos="fade-left" data-aos-delay="300" style="margin-top: -14px;">
         <div class="mt-3 px-1">
           <div class="h5">Let’s talk how I can help you!</div>
           <p>If you like my work and want to avail my services then drop me a message using the contact form Or get in touch using my email, Twitter or my contact number.</p>
