--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
   <body id="top">
     <header class="bg-light">
       <nav class="navbar navbar-expand-lg navbar-light bg-light" id="header-nav" role="navigation">
-        <div class="container"><a class="link-dark navbar-brand site-title mb-0" href="#">You order I
-           deliver</a>
+        <div class="container"><a class="link-dark navbar-brand site-title mb-0" href="#">YOU ORDER I
+           DELIVER</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto me-2">
@@ -39,6 +39,7 @@
               <li class="nav-item"><a class="nav-link" href="#skills">Skills</a></li>
               <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
               <li class="nav-item"><a class="nav-link" href="#experience">Experience</a></li>
+              <li class="nav-item"><a class="nav-link" href="#recommendations">Recommendations</a></li>
               <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
             </ul>
           </div>
@@ -338,26 +339,26 @@
     </div>
   </div>
 </div>
-<div class="section px-3 px-lg-4 pt-5" id="testimonials">
+<div class="section px-3 px-lg-4 pt-5" id="recommendations">
   <div class="container-narrow">
     <div class="text-center mb-5">
-      <h2 class="marker marker-center">Testimonials</h2>
+      <h2 class="marker marker-center">Recommendations</h2>
     </div>
     <div class="row"> 
       <div class="col-md-6 mb-5" data-aos="fade-right" data-aos-delay="100">
-        <div class="d-flex ms-md-3"><span><i class="fas fa-2x fa-quote-left"></i></span><span class="m-2">Rao Athar Khan displays exemplary professionalism and is able to take on challenges. He learns quickly and is an asset to any team.</span></div>
+        <div class="d-flex ms-md-3"><span><i class="fas fa-2x fa-quote-left"></i></span><span class="m-2">Rao Athar Khan consistently demonstrates outstanding professionalism. He not only embraces challenges but thrives in overcoming them. His rapid learning abilities make him a valuable addition to any team.</span></div>
         <div class="d-flex justify-content-end align-items-end">
           <div class="text-end me-2">
-            <div class="fw-bolder">Alex JACQUOT</div>
+            <div class="fw-bolder"><a href="https://www.linkedin.com/in/alexis-proutet/">Alexis Proutet</a></div>
             <div class="text-small">CTO / Tokenomeme</div>
           </div><img class="me-md-3 rounded" src="images/testimonials/1.jpg" width="96" height="96" alt="client 1"/>
         </div>
       </div>
       <div class="col-md-6 mb-5" data-aos="fade-left" data-aos-delay="300">
-        <div class="d-flex ms-md-3"><span><i class="fas fa-2x fa-quote-left"></i></span><span class="m-2">Rao Athar Khan displays exemplary professionalism and is able to take on challenges. He learns quickly and is an asset to any team.</span></div>
+        <div class="d-flex ms-md-3"><span><i class="fas fa-2x fa-quote-left"></i></span><span class="m-2">I'm delighted to recommend Rao Athar, for his dedication and drive in the realm of web3 Identities, IPFS systems, and token-gated access web development.</span></div>
         <div class="d-flex justify-content-end align-items-end">
           <div class="text-end me-2">
-            <div class="fw-bolder">Akhilesh Singh</div>
+            <div class="fw-bolder"><a href="https://www.linkedin.com/in/bhangbuddy/">Akhilesh Singh</a></div>
             <div class="text-small">CEO / k3S Projects India Pvt Ltd</div>
           </div><img class="me-md-3 rounded" src="images/testimonials/2.jpg" width="96" height="96" alt="client 1"/>
         </div>
@@ -366,8 +367,8 @@
         <div class="d-flex ms-md-3"><span><i class="fas fa-2x fa-quote-left"></i></span><span class="m-2">Rao Athar Khan is a great co-worker and problem solver. He is quick to extend his helping hand and makes a good team player.</span></div>
         <div class="d-flex justify-content-end align-items-end">
           <div class="text-end me-2">
-            <div class="fw-bolder">Soumya Upadhyay </div>
-            <div class="text-small">Researcher at NIT Arunachal Pradesh</div>
+            <div class="fw-bolder"><a href="https://www.linkedin.com/in/soumya-upadhyay-094738192/">Soumya Upadhyay</a></div>
+            <div class="text-small">Researcher / NIT Arunachal Pradesh</div>
           </div><img class="me-md-3 rounded" src="images/testimonials/3.jpg" width="96" height="96" alt="client 1"/>
         </div>
       </div>
@@ -375,8 +376,8 @@
         <div class="d-flex ms-md-3"><span><i class="fas fa-2x fa-quote-left"></i></span><span class="m-2">Rao Athar Khan is a great co-worker and problem solver. He is quick to extend his helping hand and makes a good team player.</span></div>
         <div class="d-flex justify-content-end align-items-end">
           <div class="text-end me-2">
-            <div class="fw-bolder">Mehtab Zafar </div>
-            <div class="text-small">Product Security Engineer</div>
+            <div class="fw-bolder"><a href="https://www.linkedin.com/in/mzfr/">Mehtab Zafar</a></div>
+            <div class="text-small">Product Security Engineer / Red Queen Dynamics</div>
           </div><img class="me-md-3 rounded" src="images/testimonials/4.jpg" width="96" height="96" alt="client 1"/>
         </div>
       </div>
