--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
         </div>
       </div>
       <div class="col-md-6 mb-5" data-aos="fade-right" data-aos-delay="200">
-        <div class="d-flex ms-md-3"><span><i class="fas fa-2x fa-quote-left"></i></span><span class="m-2">Rao Athar Khan is a great co-worker and problem solver. He is quick to extend his helping hand and makes a good team player.</span></div>
+        <div class="d-flex ms-md-3"><span><i class="fas fa-2x fa-quote-left"></i></span><span class="m-2">Rao Athar has desirable strengths that I believe will be valuable to any organization. He is always interested in supporting others.</span></div>
         <div class="d-flex justify-content-end align-items-end">
           <div class="text-end me-2">
             <div class="fw-bolder"><a href="https://www.linkedin.com/in/soumya-upadhyay-094738192/">Soumya Upadhyay</a></div>
